@@ -1,5 +1,9 @@
 2002-08-01  Damien Sandras  <dsandras@seconix.com>
 
+	* src/main_window.cpp: Improved main window layout.
+
+2002-08-01  Damien Sandras  <dsandras@seconix.com>
+
 	* src/misc.cpp: Added 2 functions : gnomemeeting_sound_daemons_suspend
 	and gnomemeeting_sound_daemons_resume.
 
